<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/input" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/navHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nav_home"
            android:textColor="@color/text_secondary"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/navDownloads"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nav_downloads"
            android:textColor="@color/text_secondary"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/navMusic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nav_music"
            android:textColor="@color/text_secondary"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/navBrowser"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nav_browser"
            android:textColor="@color/text_secondary"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/navSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nav_settings"
            android:textColor="@color/text_secondary"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
